crabbing-interpreters/tests/testsuite/snapshots/testsuite__repl__case_03_negative_nil.snap
---
source: crabbing-interpreters/tests/testsuite/main.rs
info:
  program: crabbing-interpreters
  args:
    - "--scopes"
  stdin: "- nil;"
---
success: true
exit_code: 0
----- stdout -----
[0mλ» [1m[0m(program
   (expr (- nil)))
[0mλ» [1m[0m
----- stderr -----
Error: type error in unary operator `-`: operand has type `Nil` but `-` requires type `Number`
   ╭─[<input>:1:1]
   │
 1 │ - nil;
   │ ┬ ─┬─  
   │ │  ╰─── this is of type `Nil`
   │ │      
   │ ╰────── the operator in question
   │ 
   │ Help: operator `-` can only be applied to numbers
───╯
