crabbing-interpreters/tests/testsuite/snapshots/testsuite__repl__case_04_divide_by_string.snap
---
source: tests/testsuite/main.rs
info:
  program: crabbing-interpreters
  args: []
  stdin: "42 / \"string\";"
---
success: true
exit_code: 0
----- stdout -----
[0mλ» [1m[0m[0mλ» [1m[0m
----- stderr -----
Error: type error in binary operator `/`: lhs has type `Number`, but rhs has type `String`
   ╭─[<input>:1:1]
   │
 1 │ 42 / "string";
   │ ─┬ ┬ ────┬───  
   │  │ │     ╰───── this is of type `String`
   │  │ │           
   │  │ ╰─────────── the operator in question
   │  │             
   │  ╰───────────── this is of type `Number`
   │ 
   │ Help: operator `/` can only be applied to numbers
───╯
